--- a/PivotViewerLessons/Lessons/Lessons.csproj
+++ b/PivotViewerLessons/Lessons/Lessons.csproj
@@ -85,6 +85,21 @@
     </Compile>
     <Compile Include="Lesson3\Lesson3.cs" />
     <Compile Include="Lesson3\Lesson3ViewModel.cs" />
+    <Compile Include="Lesson4\CustomLoading.xaml.cs">
+      <DependentUpon>CustomLoading.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Lesson4\Example.xaml.cs">
+      <DependentUpon>Example.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Lesson4\Lesson4.cs" />
+    <Compile Include="Lesson5\CustomInfoPane.xaml.cs">
+      <DependentUpon>CustomInfoPane.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Lesson5\Example.xaml.cs">
+      <DependentUpon>Example.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Lesson5\Lesson5.cs" />
+    <Compile Include="Lesson5\Lesson5ViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -105,6 +120,22 @@
     <Page Include="Lesson3\Example.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Lesson4\CustomLoading.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Lesson4\Example.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Lesson5\CustomInfoPane.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Lesson5\Example.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
